--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <p id="state"></p>
     <div class="contents">
       <ul>
+        <li id="result"></li>
         <li id="turnout"></li>
         <li>
           <b>Predicted Demographics by race:</b> (Inner: voters for Republican, Outer: voters for Democratic)
