--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <div id="myDropdown" class="dropdown-content">
         <a onclick="changeto('Corrected by Gender')">Corrected by Gender</a>
         <a onclick="changeto('Corrected by Race')">Corrected by Race</a>
-        <a onclick="changeto('Corrected by Both')">Corrected by Both</a>
+        <a onclick="changeto('Corrected by Gender&Race')">Corrected by Gender&Race</a>
+        <a onclick="changeto('Corrected by Political Bias')">Corrected by Political Bias</a>
         <a onclick="changeto('Uncorrected')"> Uncorrected</a>
       </div>
     </div>
